# eduide-bazel-template

./: .bazelrc  .gitignore  MODULE.bazel  README.md
src/: BUILD.bazel  app.c  gen.h  gen_dispatch.c  sorting.c  sorting.h  stats.c  stats.h  strtools.c  strtools.h
src/genmods/: mod_000.c  mod_001.c  mod_002.c  mod_003.c  mod_004.c  mod_005.c  mod_006.c  mod_007.c  mod_008.c  mod_009.c  mod_010.c  mod_011.c  mod_012.c  mod_013.c  mod_014.c  mod_015.c  mod_016.c  mod_017.c  mod_018.c  mod_019.c  mod_020.c  mod_021.c  mod_022.c  mod_023.c  mod_024.c  mod_025.c  mod_026.c  mod_027.c  mod_028.c  mod_029.c  mod_030.c  mod_031.c  mod_032.c  mod_033.c  mod_034.c  mod_035.c  mod_036.c  mod_037.c  mod_038.c  mod_039.c
test/: BUILD.bazel  check.h  sorting_test.c  sorting_test.cc  stats_test.c  stats_test.cc  strtools_test.c  strtools_test.cc
