module(
    name = "eduide_bazel_template",
    version = "1.0.0",
)

# No external dependencies: the EduIDE C blueprint ships a C-only toolchain
# (no C++), so tests are written in pure C rather than with GoogleTest. The
# dependency-proxy part of the evaluation is covered by the Gradle/Maven
# template instead. cc_library / cc_binary / cc_test are native rules in
# Bazel 7, so no rules_cc dependency is required either.
